tests/paczka1/fuzzy1/22116399.err
Error in line 3: 8DS2irZUOEN A336 94,7
Error in line 10: T2hVIgxIs S104 68,5
Error in line 20: WmIsplU0yi S317 30,0
Error in line 29: 6xJOg A336 22,6
Error in line 33: 8DS2irZUOEN S104 16,3
